# wechat-mp-skill

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  SKILL.md  build_skill.py  pyproject.toml
.github/workflows/: ci.yml  release.yml
references/: api_reference.md  article_format.md  error_codes.md  stats_reference.md
scripts/: __init__.py  draft_manager.py  html_submitter.py  material_manager.py  stats_manager.py  wechat_client.py
tests/: __init__.py  conftest.py  test_draft_manager.py  test_e2e.py  test_html_submitter.py  test_material_manager.py  test_stats_manager.py  test_wechat_client.py
